JS Validation Form

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               </div>
               <div class="login-block">
                 <div class="title login-block__title text_font_35"><span class="title__text">Авторизируйтесь</span></div>
-                <form class="form form-auth">
+                <form class="form form-auth" id="form_welcome">
                   <div class="form__inputs-block">
                     <label class="form__label form__label_login" for="login">
                       <input class="form__input" id="login" type="text" placeholder="Логин">
