--- a/works.html
+++ b/works.html
@@ -114,7 +114,7 @@
           </ul>
           <div class="feedback__form">
             <div class="title text_font_35"><span class="title__text">Связаться со мной</span></div>
-            <form class="form">
+            <form class="form" id="form_works">
               <div class="inputs__block">
                 <input class="input__item" type="text" placeholder="Имя" id="form_name">
                 <input class="input__item" type="email" placeholder="E-mail" id="form_email">
