JS валидация форм

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                 <form class="form form-auth" id="form_welcome">
                   <div class="form__inputs-block">
                     <label class="form__label form__label_login" for="login">
-                      <input class="form__input" id="login" type="text" placeholder="Логин">
+                      <input class="form__input" id="login" type="text" placeholder="Логин" name="login">
                     </label>
                     <label class="form__label form__label_pass" for="password">
-                      <input class="form__input" id="password" type="password" placeholder="Пароль">
+                      <input class="form__input" id="password" type="password" placeholder="Пароль" name="password">
                     </label>
                   </div>
                   <div class="form__checks">
