--- a/works.html
+++ b/works.html
@@ -116,8 +116,8 @@
             <div class="title text_font_35"><span class="title__text">Связаться со мной</span></div>
             <form class="form" id="form_works">
               <div class="inputs__block">
-                <input class="input__item" type="text" placeholder="Имя" id="form_name">
-                <input class="input__item" type="email" placeholder="E-mail" id="form_email">
+                <input class="input__item" type="text" placeholder="Имя" id="form_name" name="Name">
+                <input class="input__item" type="email" placeholder="E-mail" id="form_email" name="email">
                 <textarea class="input__item input_min-height_140" placeholder="Ваше сообщение"></textarea>
               </div>
               <div class="form__buttons">
