--- a/works.html
+++ b/works.html
@@ -67,25 +67,30 @@
           <div class="slider">
             <div class="slider__descr block_width_50">
               <div class="descrcription">
-                <div class="title text_font_35 text_align_center"><span class="title__text text_mb_30">Сайт школы онлайн<br> образования</span></div>
-                <div class="cources"> <span class="cources__text">html, css, javascript</span></div><a class="button_link" href="#"> <span class="text_color_white">Посмотреть сайт</span></a>
+                <div class="title text_font_35 text_align_center"><span class="title__text text_mb_30 slider__title">ItLoft</span></div>
+                <div class="cources"> <span class="cources__text">Дизайн, программирование, Нетворкинг</span></div><a class="button_link slider__button_link" href="#"> <span class="text_color_white">Посмотреть сайт</span></a>
               </div>
             </div>
-            <div class="slider__image_size_big block_width_50"><img class="slider_pic" src="assets/img/slider/work-1.png" alt="work-1"></div>
-            <div class="slider__image_size_small block_width_50">
-              <div class="slider__image_small"><img class="slider_pic slider_pic_small" src="assets/img/slider/work-2.png" alt="work-2">
-                <div class="slider__arrow-scroll"><a class="arrow-scroll_down" href="#">
-                            <svg class="arrow-scroll__icon">
-                              <use xlink:href="assets/img/sprite/sprite.svg#portf_arrow_down"></use>
-                            </svg></a></div>
-              </div>
-              <div class="slider__image_small"><img class="slider_pic slider_pic_small" src="assets/img/slider/work-3.png" alt="work-3">
-                <div class="slider__arrow-scroll"><a class="arrow-scroll_up" href="#">
-                            <svg class="arrow-scroll__icon">
-                              <use xlink:href="assets/img/sprite/sprite.svg#portf_arrow_up"></use>
-                            </svg></a></div>
-              </div>
-            </div>
+            <div class="slider__image_size_big block_width_50"><img class="slider_pic slider__img_big" src="assets/img/slider/1.png" alt="work-1"></div>
+            <div class="slider__image_size_small block_width_50"><a class="slider__link slider__link_down" href="#">
+                        <svg class="slide-toggle">
+                          <use xlink:href="assets/img/sprite/sprite.svg#portf_arrow_down"></use>
+                        </svg>
+                <ul class="slider__list slider__list_down">
+                  <li class="slider__item" data-src="assets/img/slider/1.png" data-title="ItLoft" data-tech="Дизайн, программирование, Нетворкинг" data-link="#"><img class="slider__pic" src="assets/img/slider/1.png" alt="next slide"></li>
+                  <li class="slider__item" data-src="assets/img/slider/2.png" data-title="Сайт школы онлайн образования" data-tech="html, css, javascript" data-link="#"><img class="slider__pic" src="assets/img/slider/2.png" alt="next slide"></li>
+                  <li class="slider__item" data-src="assets/img/slider/3.png" data-title="Портал видео-образования" data-tech="все новейшие технологии" data-link="#"><img class="slider__pic" src="assets/img/slider/3.png" alt="next slide"></li>
+                  <li class="slider__item active-slide" data-src="assets/img/slider/4.png" data-title="Все про йогу" data-tech="йога, релаксация" data-link="#"><img class="slider__pic" src="assets/img/slider/4.png" alt="next slide"></li>
+                </ul></a><a class="slider__link slider__link_up" href="#">
+                        <svg class="slide-toggle">
+                          <use xlink:href="assets/img/sprite/sprite.svg#portf_arrow_up"></use>
+                        </svg>
+                <ul class="slider__list slider__list_reverse">
+                  <li class="slider__item"><img class="slider__pic" src="assets/img/slider/1.png" alt="prev-slide"></li>
+                  <li class="slider__item active-slide"><img class="slider__pic" src="assets/img/slider/2.png" alt="prev-slide"></li>
+                  <li class="slider__item"><img class="slider__pic" src="assets/img/slider/3.png" alt="prev-slide"></li>
+                  <li class="slider__item"><img class="slider__pic" src="assets/img/slider/4.png" alt="prev-slide"></li>
+                </ul></a></div>
           </div>
         </section>
         <div class="title text_font_63 text_align_center text_mb_15"><span class="title__text">Что обо мне<br> говорят </span></div>
