--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             <ul class="socials text_color_rgba-white">
               <li class="socials__item social__item_header"><a class="socials__link socials__link_header" href="#">
                           <svg class="socials__icon socials__icon_header">
-                            <use xlink:href="assets/img/sprite/sprite.svg#vk"></use>
+                            <use xlink:href="assets/img/sprite/sprite.svg#fb"></use>
                           </svg></a></li>
               <li class="socials__item social__item_header"><a class="socials__link socials__link_header" href="#">
                           <svg class="socials__icon socials__icon_header">
@@ -39,7 +39,7 @@
           <div class="header__title_transparent"><img class="title_image_transparent" id="title_image_transparent" src="assets/img/portfolio_header_bg.png" alt="portfolio header"></div>
           <div class="login-box login-box__bg_transparent" id="login-box">
             <div class="login-box__pic"><img class="login-box__pic-elem" src="assets/img/user.jpg" alt="user-photo"></div><span class="login-box__title_35px">Андрей Секачев</span><span class="login-box__subtitle_header">Личный сайт веб разработчика</span>
-          </div><a class="arrow-scroll_header_down" href="#">
+          </div><a class="arrow-scroll_header_down" href="#about">
                     <svg class="arrow-scroll_header">
                       <use xlink:href="assets/img/sprite/sprite.svg#arrow_down"></use>
                     </svg></a>
@@ -60,7 +60,7 @@
             </ul>
           </nav>
         </div>
-        <section class="section section_about">
+        <section class="section section_about" id="about">
           <div class="about-descr">
             <div class="about-descr__title">
               <div class="title text_font_63 text_align_center flex_width_50"><span class="title__text">Обо мне</span></div>
@@ -69,7 +69,7 @@
               <div class="user__image"><img class="about__user_pic" src="assets/img/user-pic.jpg" alt="user-pic"></div>
               <div class="title text_font_35 text_align_center"><span class="title__text">Кто я</span></div>
               <div class="user__text">
-                <p>Я веб разработчик из Новосибирска. Мне 27 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.</p>
+                <p>Я начинающий веб разработчик из Киева. Мне 37 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.</p>
                 <p>Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!</p>
               </div>
             </div>
@@ -134,7 +134,7 @@
                           <svg class="skill__circle" viewbox="0 0 110 110">
                             <circle class="skill__circle_first" r="45" cx="50%" cy="50%" fill="none"></circle>
                             <circle class="skill__circle_second circle-85" r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)"></circle>
-                          </svg><span class="skill__name">MySQL</span>
+                          </svg><span class="skill__name">Ajax</span>
                         </div>
                       </li>
                       <li class="circles__item">
@@ -142,7 +142,7 @@
                           <svg class="skill__circle" viewbox="0 0 110 110">
                             <circle class="skill__circle_first" r="45" cx="50%" cy="50%" fill="none"></circle>
                             <circle class="skill__circle_second circle-85" r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)"></circle>
-                          </svg><span class="skill__name">Node.js<br>&npm</span>
+                          </svg><span class="skill__name">Node.js<br>& npm</span>
                         </div>
                       </li>
                       <li class="circles__item">
@@ -202,22 +202,22 @@
                 <li class="contacts__item">
                           <svg class="contacts__icon">
                             <use xlink:href="assets/img/sprite/sprite.svg#skype_n"></use>
-                          </svg><span class="contacts__text">skype_kdn</span>
+                          </svg><span class="contacts__text">skype_username</span>
                 </li>
                 <li class="contacts__item">
                           <svg class="contacts__icon">
                             <use xlink:href="assets/img/sprite/sprite.svg#envelope"></use>
-                          </svg><span class="contacts__text">astahov@gmail.com</span>
+                          </svg><span class="contacts__text">username@gmail.com</span>
                 </li>
                 <li class="contacts__item">
                           <svg class="contacts__icon">
                             <use xlink:href="assets/img/sprite/sprite.svg#phone"></use>
-                          </svg><span class="contacts__text">+7 931 200 93 24</span>
+                          </svg><span class="contacts__text">+380 44 4444444</span>
                 </li>
                 <li class="contacts__item">
                           <svg class="contacts__icon">
                             <use xlink:href="assets/img/sprite/sprite.svg#map_marker"></use>
-                          </svg><span class="contacts__text">г.Новосибирск, ул. Инская, д. 5</span>
+                          </svg><span class="contacts__text">г. Киев, ул. Крещатик, д. 1</span>
                 </li>
               </ul>
             </div>
@@ -236,7 +236,7 @@
                 <ul class="socials social_view_circle">
                   <li class="socials__item"><a class="socials__link socials__link_footer" href="#">
                               <svg class="socials__icon socials__icon_footer">
-                                <use xlink:href="assets/img/sprite/sprite.svg#vk_round"></use>
+                                <use xlink:href="assets/img/sprite/sprite.svg#fb_round"></use>
                               </svg></a></li>
                   <li class="socials__item"><a class="socials__link socials__link_footer" href="#">
                               <svg class="socials__icon socials__icon_footer">
