--- a/blog.html
+++ b/blog.html
@@ -19,11 +19,11 @@
       <div class="maincontent">
         <header class="header header_blog">
           <div class="header__bg" id="header__bg"></div>
-          <div class="header__top-line header__top-line_width_80">
+          <div class="header__top-line">
             <ul class="socials text_color_rgba-white">
               <li class="socials__item social__item_header"><a class="socials__link socials__link_header" href="#">
                           <svg class="socials__icon socials__icon_header">
-                            <use xlink:href="assets/img/sprite/sprite.svg#vk"></use>
+                            <use xlink:href="assets/img/sprite/sprite.svg#fb"></use>
                           </svg></a></li>
               <li class="socials__item social__item_header"><a class="socials__link socials__link_header" href="#">
                           <svg class="socials__icon socials__icon_header">
@@ -107,7 +107,7 @@
               <ul class="socials social_view_circle">
                 <li class="socials__item"><a class="socials__link socials__link_footer" href="#">
                             <svg class="socials__icon socials__icon_footer">
-                              <use xlink:href="assets/img/sprite/sprite.svg#vk_round"></use>
+                              <use xlink:href="assets/img/sprite/sprite.svg#fb_round"></use>
                             </svg></a></li>
                 <li class="socials__item"><a class="socials__link socials__link_footer" href="#">
                             <svg class="socials__icon socials__icon_footer">
