--- a/works.html
+++ b/works.html
@@ -17,13 +17,13 @@
   <body>
     <div class="wrapper">
       <div class="maincontent">
-        <header class="header">
+        <header class="header" id="to-top">
           <div class="header__bg" id="header__bg"></div>
           <div class="header__top-line">
             <ul class="socials text_color_rgba-white">
               <li class="socials__item social__item_header"><a class="socials__link socials__link_header" href="#">
                           <svg class="socials__icon socials__icon_header">
-                            <use xlink:href="assets/img/sprite/sprite.svg#vk"></use>
+                            <use xlink:href="assets/img/sprite/sprite.svg#fb"></use>
                           </svg></a></li>
               <li class="socials__item social__item_header"><a class="socials__link socials__link_header" href="#">
                           <svg class="socials__icon socials__icon_header">
@@ -39,7 +39,7 @@
           <div class="header__title_transparent"><img id="title_image_transparent" src="assets/img/portfolio_header_bg.png" alt="portfolio header"></div>
           <div class="login-box login-box__bg_transparent" id="login-box">
             <div class="login-box__pic"><img class="login-box__pic-elem" src="assets/img/user.jpg" alt="user-photo"></div><span class="login-box__title_35px">Андрей Секачев</span><span class="login-box__subtitle_header">Личный сайт веб разработчика</span>
-          </div><a class="arrow-scroll_header_down" href="#">
+          </div><a class="arrow-scroll_header_down" href="#works">
                     <svg class="arrow-scroll_header">
                       <use xlink:href="assets/img/sprite/sprite.svg#arrow_down"></use>
                     </svg></a>
@@ -60,7 +60,7 @@
             </ul>
           </nav>
         </div>
-        <section class="section section_works">
+        <section class="section section_works" id="works">
           <div class="my-works">
             <div class="title text_font_63 text_align_center"><span class="title__text text_line-height_184">Мои работы</span></div>
           </div>
@@ -132,7 +132,7 @@
               <div class="error-popup error-popup_name">Вы не ввели имя</div>
               <div class="error-popup error-popup_email">Вы не ввели email</div>
             </form>
-          </div><a class="arrow-scroll_footer_up" href="#">
+          </div><a class="arrow-scroll_footer_up" href="#to-top">
                     <svg class="arrow__up">
                       <use xlink:href="assets/img/sprite/sprite.svg#portf_arrow_up"></use>
                     </svg></a>
@@ -150,7 +150,7 @@
                 <ul class="socials social_view_circle">
                   <li class="socials__item"><a class="socials__link socials__link_footer socials__link_vk" href="#">
                               <svg class="socials__icon socials__icon_footer">
-                                <use xlink:href="assets/img/sprite/sprite.svg#vk_round"></use>
+                                <use xlink:href="assets/img/sprite/sprite.svg#fb_round"></use>
                               </svg></a></li>
                   <li class="socials__item"><a class="socials__link socials__link_footer socials__link_git" href="#">
                               <svg class="socials__icon socials__icon_footer">
